working state of notebooks 1_1 (vk ref) and 2 (sim); fixed counting overlapping k-mers

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import varseek as vk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,47 +108,56 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_27803/361928022.py:4: DtypeWarning: Columns (12,53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mutation_metadata_df = pd.read_csv(mutation_metadata_df_path)\n"
+     ]
+    }
+   ],
    "source": [
-    "# #!!! TEMP\n",
-    "# import varseek\n",
-    "# mutation_metadata_df_path = mutation_metadata_df\n",
-    "# mutation_metadata_df = pd.read_csv(mutation_metadata_df_path)\n",
+    "#!!! TEMP\n",
+    "import varseek\n",
+    "mutation_metadata_df_path = mutation_metadata_df\n",
+    "mutation_metadata_df = pd.read_csv(mutation_metadata_df_path)\n",
     "\n",
-    "# sim_data_df_path = \"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_temp2/vk_build/sim_data_df.csv\"\n",
-    "# sim_data_df = pd.read_csv(sim_data_df_path, usecols=[\"header\", \"mutant_sequence\", \"wt_sequence\"])\n",
+    "sim_data_df_path = \"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_temp2/vk_build/sim_data_df.csv\"\n",
+    "sim_data_df = pd.read_csv(sim_data_df_path, usecols=[\"header\", \"mutant_sequence\", \"wt_sequence\"])\n",
     "\n",
-    "# sim_data_df.rename(\n",
-    "#     columns={\n",
-    "#         \"mutant_sequence\": \"mutant_sequence_read_parent\",\n",
-    "#         \"wt_sequence\": \"wt_sequence_read_parent\",\n",
-    "#     },\n",
-    "#     inplace=True,\n",
-    "# )\n",
+    "sim_data_df.rename(\n",
+    "    columns={\n",
+    "        \"mutant_sequence\": \"mutant_sequence_read_parent\",\n",
+    "        \"wt_sequence\": \"wt_sequence_read_parent\",\n",
+    "    },\n",
+    "    inplace=True,\n",
+    ")\n",
     "\n",
-    "# sim_data_df[\"mutant_sequence_read_parent_rc\"] = sim_data_df[\"mutant_sequence_read_parent\"].apply(varseek.varseek_build.reverse_complement)\n",
-    "# sim_data_df[\"mutant_sequence_read_parent_length\"] = sim_data_df[\"mutant_sequence_read_parent\"].str.len()\n",
+    "sim_data_df[\"mutant_sequence_read_parent_rc\"] = sim_data_df[\"mutant_sequence_read_parent\"].apply(varseek.varseek_build.reverse_complement)\n",
+    "sim_data_df[\"mutant_sequence_read_parent_length\"] = sim_data_df[\"mutant_sequence_read_parent\"].str.len()\n",
     "\n",
-    "# sim_data_df[\"wt_sequence_read_parent_rc\"] = sim_data_df[\"wt_sequence_read_parent\"].apply(varseek.varseek_build.reverse_complement)\n",
-    "# sim_data_df[\"wt_sequence_read_parent_length\"] = sim_data_df[\"wt_sequence_read_parent\"].str.len()\n",
+    "sim_data_df[\"wt_sequence_read_parent_rc\"] = sim_data_df[\"wt_sequence_read_parent\"].apply(varseek.varseek_build.reverse_complement)\n",
+    "sim_data_df[\"wt_sequence_read_parent_length\"] = sim_data_df[\"wt_sequence_read_parent\"].str.len()\n",
     "\n",
-    "# mutation_metadata_df = pd.merge(\n",
-    "#     mutation_metadata_df,\n",
-    "#     sim_data_df[\n",
-    "#         [\n",
-    "#             \"header\",\n",
-    "#             \"mutant_sequence_read_parent\",\n",
-    "#             \"mutant_sequence_read_parent_rc\",\n",
-    "#             \"mutant_sequence_read_parent_length\",\n",
-    "#             \"wt_sequence_read_parent\",\n",
-    "#             \"wt_sequence_read_parent_rc\",\n",
-    "#             \"wt_sequence_read_parent_length\",\n",
-    "#         ]\n",
-    "#     ],\n",
-    "#     on=\"header\",\n",
-    "#     how=\"left\",\n",
-    "#     suffixes=(\"\", \"_read_parent\"),\n",
-    "# )"
+    "mutation_metadata_df = pd.merge(\n",
+    "    mutation_metadata_df,\n",
+    "    sim_data_df[\n",
+    "        [\n",
+    "            \"header\",\n",
+    "            \"mutant_sequence_read_parent\",\n",
+    "            \"mutant_sequence_read_parent_rc\",\n",
+    "            \"mutant_sequence_read_parent_length\",\n",
+    "            \"wt_sequence_read_parent\",\n",
+    "            \"wt_sequence_read_parent_rc\",\n",
+    "            \"wt_sequence_read_parent_length\",\n",
+    "        ]\n",
+    "    ],\n",
+    "    on=\"header\",\n",
+    "    how=\"left\",\n",
+    "    suffixes=(\"\", \"_read_parent\"),\n",
+    ")"
    ]
   },
   {
@@ -165,76 +183,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcrs_fa = \"\"\n",
+    "from varseek.utils import get_df_overlap\n",
+    "df_overlap = get_df_overlap(mcrs_fa, out_dir_notebook=\".\", k=59, strandedness=False, mcrs_id_column=\"mcrs_id\", output_text_file=\"temp.txt\", output_plot_folder=\"plots_temp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jrich/Desktop/varseek/varseek/varseek_sim.py:114: DtypeWarning: Columns (12,53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  mutation_metadata_df = pd.read_csv(mutation_metadata_df)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cannot find mutant sequence read parent\n",
-      "running varseek build\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jrich/Desktop/varseek/varseek/varseek_build.py:638: DtypeWarning: Columns (12,53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  mutations = pd.read_csv(mutations)\n",
-      "Extracting MCRS left flank sequences: 100%|██████████| 5343215/5343215 [01:22<00:00, 64484.73it/s] \n",
-      "Extracting MCRS right flank sequences: 100%|██████████| 5343215/5343215 [01:34<00:00, 56841.26it/s] \n",
-      "15:42:41 - INFO - Removed 197 mutant kmers with length less than 150...\n",
-      "15:42:41 - WARNING - \n",
-      "        5343018 mutations correctly recorded (100.00%)\n",
-      "        0 intronic mutations found (0.00%)\n",
-      "        0 posttranslational region mutations found (0.00%)\n",
-      "        0 unknown mutations found (0.00%)\n",
-      "        0 mutations with uncertain mutation found (0.00%)\n",
-      "        0 mutations with ambiguous position found (0.00%)\n",
-      "        0 mutations with incorrect wildtype base found (0.00%)\n",
-      "        0 mutations with indices outside of the sequence length found (0.00%)\n",
-      "        197 mutations with fragment length < w found (0.00%)\n",
-      "        \n",
-      "15:44:19 - INFO - Saving dataframe with updated mutation info...\n",
-      "15:44:19 - WARNING - File size can be very large if the number of mutations is large.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated mutation info has been saved to /home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_temp3_k59/vk_build/sim_data_df.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "15:49:01 - INFO - FASTA file containing mutated sequences created at /home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_temp3_k59/vk_build/mcrs.fa.\n",
-      "/home/jrich/Desktop/varseek/varseek/varseek_sim.py:199: DtypeWarning: Columns (13,52,67,69) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  sim_data_df = pd.read_csv(update_df_out)\n",
-      "15:53:19 - INFO - Initial number of mutations: 5343215\n",
-      "15:53:40 - INFO - Filtered 44251 mutations dlist with equal none - 5298964 mutations remaining\n",
-      "15:53:48 - INFO - Filtered 163942 mutations kmer_overlap_in_mcrs_reference with isfalse False - 5135022 mutations remaining\n",
-      "15:54:15 - INFO - Output fasta file with filtered mutations: None\n",
-      "15:54:15 - INFO - t2g file containing mutated sequences created at None.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: 'NoneType' object has no attribute 'composition'\n",
-      "Wrote 56419 mutations to /home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_temp3_k59/synthetic_reads.fq\n"
+      "/tmp/ipykernel_141381/2412695203.py:36: DtypeWarning: Columns (12,53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)\n"
      ]
     }
    ],
@@ -1724,17 +1692,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All explainable!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unexplainable_references = 0\n",
     "for header in metric_dictionary_reference['FNs']:\n",
@@ -1762,6 +1722,65 @@
    "source": [
     "unique_mcrs_df.to_csv(unique_mcrs_df_out, index=False)\n",
     "read_df.to_csv(read_df_out_updated, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_141381/3369590705.py:1: DtypeWarning: Columns (19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  read_df = pd.read_csv(read_df_out_updated)\n",
+      "/tmp/ipykernel_141381/3369590705.py:2: DtypeWarning: Columns (21,36,38) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  unique_mcrs_df = pd.read_csv(unique_mcrs_df_out)\n"
+     ]
+    }
+   ],
+   "source": [
+    "read_df = pd.read_csv(read_df_out_updated)\n",
+    "unique_mcrs_df = pd.read_csv(unique_mcrs_df_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn_ref = unique_mcrs_df.loc[unique_mcrs_df['FN']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(unique_mcrs_df.loc[unique_mcrs_df['pseudoaligned_to_human_reference_despite_not_truly_aligning'] == True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn_ref"
    ]
   },
   {
