further fixed mcrs kmer overlap counting

--- a/notebooks/1_2_variant_detection_sample_alignment.ipynb
+++ b/notebooks/1_2_variant_detection_sample_alignment.ipynb
@@ -36,6 +36,7 @@
    "source": [
     "w=54  # window size for varseek build (should be at least 1 less than kallisto k)\n",
     "k=55\n",
+    "k_standard=31\n",
     "threads = 32\n",
     "strand = \"unstranded\"  # \"forward\", \"reverse\", or \"unstranded\"\n",
     "\n",
@@ -77,7 +78,9 @@
     "seqtk=\"seqtk\"\n",
     "mutation_metadata_df_path = None  #!!! replace\n",
     "standard_index = \"\"\n",
-    "standard_t2g = \"\"\n"
+    "standard_t2g = \"\"\n",
+    "standard_genome = \"\"  #!!! can use gget ref\n",
+    "standard_gtf = \"\"  #!!! can use gget ref\n"
    ]
   },
   {
@@ -190,12 +193,15 @@
    "outputs": [],
    "source": [
     "if not os.path.exists(standard_index) or not os.path.exists(standard_t2g):\n",
-    "    kb_ref_command = [\"kb\", \"ref\", \"-t\", str(threads), \"-i\", standard_index, \"-g\", standard_t2g, \"-d\", \"human\"]\n",
+    "    if k_standard == 31:\n",
+    "        kb_ref_command = [\"kb\", \"ref\", \"-t\", str(threads), \"-i\", standard_index, \"-g\", standard_t2g, \"-d\", \"human\"]\n",
+    "    else:  \n",
+    "        kb_ref_command = [\"kb\", \"ref\", \"-t\", str(threads), \"-k\", str(k_standard), \"-i\", standard_index, \"-g\", standard_t2g, standard_genome, standard_gtf]\n",
     "    subprocess.run(kb_ref_command, check=True)\n",
     "\n",
     "# TODO: incorporate assay bulk vs sc in here\n",
     "if not os.path.exists(kb_count_out_standard_index) or len(os.listdir(kb_count_out_standard_index)) == 0:\n",
-    "    kb_count_standard_index_command = [\"kb\", \"count\", \"-t\", str(threads), \"-k\", str(k), \"-i\", standard_index, \"-g\", standard_t2g, \"-x\", \"bulk\", \"--h5ad\", \"--parity\", parity, \"--strand\", strand, \"-o\", kb_count_out_standard_index] + rnaseq_fastq_files_quality_controlled\n",
+    "    kb_count_standard_index_command = [\"kb\", \"count\", \"-t\", str(threads), \"-k\", str(k_standard), \"-i\", standard_index, \"-g\", standard_t2g, \"-x\", \"bulk\", \"--h5ad\", \"--parity\", parity, \"--strand\", strand, \"-o\", kb_count_out_standard_index] + rnaseq_fastq_files_quality_controlled\n",
     "    subprocess.run(kb_count_standard_index_command, check=True)"
    ]
   },
