continued fixing df overlap; began writing alignment to normal gene matrix function

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bus_df = make_bus_df(kallisto_out = kb_count_out_mm, fastq_file = synthetic_reads_fastQ, t2g_file = mutation_t2g, mm = False, union = False, assay = \"bulk\", bustools = \"/home/jrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\")\n",
+    "bus_df = make_bus_df(kallisto_out = kb_count_out_mm, fastq_file_list = synthetic_reads_fastQ, t2g_file = mutation_t2g, mm = False, union = False, assay = \"bulk\", bustools = \"/home/jrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\")\n",
     "bus_df.rename(columns={\"fastq_header\": \"read_id\"}, inplace=True)"
    ]
   },
@@ -888,7 +888,7 @@
    "source": [
     "# if 'bus_df' not in globals():\n",
     "#     from varseek.utils import make_bus_df\n",
-    "#     bus_df = make_bus_df(kallisto_out = kb_count_out_mm, fastq_file = synthetic_reads_fastQ, t2g_file = mutation_t2g, mm = True, union = False, assay = \"bulk\", bustools = \"/home/jrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\")\n",
+    "#     bus_df = make_bus_df(kallisto_out = kb_count_out_mm, fastq_file_list = synthetic_reads_fastQ, t2g_file = mutation_t2g, mm = True, union = False, assay = \"bulk\", bustools = \"/home/jrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\")\n",
     "#     bus_df.rename(columns={\"fastq_header\": \"read_id\"}, inplace=True)\n",
     "\n",
     "# # add some code here to check where these map\n",
